--- a/web/cader/src/app/components/custom/input-radio/input-radio.component.html
+++ b/web/cader/src/app/components/custom/input-radio/input-radio.component.html
@@ -3,8 +3,8 @@
     class="form-check-input"
     type="radio"
     [name]="name"
-    [value]="valueFix"
-    [(ngModel)]="value"
+    [value]="valueFix?.id"
+    [ngModel]="value?.id"
     [id]="id"
     (change)="change()"
     [disabled]="disabled"
