new display play bi

--- a/web/cader/src/app/auth/dev/bi/create-bi/components/biparameter-item/biparameter-item.component.html
+++ b/web/cader/src/app/auth/dev/bi/create-bi/components/biparameter-item/biparameter-item.component.html
@@ -133,7 +133,7 @@
         <div
           *ngIf="typeInputPrimitiveOrEntity.id === constPrimitiEntity.ENTITY.id"
         >
-          <div class="drop">
+          <div class="drop mt-5">
             <dropdownstr
               formControlName="typeClass"
               [list]="listClass"
