formatos de download bi

--- a/web/cader/src/app/auth/dev/bi/create-bi/components/biquery-item/biquery-item.component.html
+++ b/web/cader/src/app/auth/dev/bi/create-bi/components/biquery-item/biquery-item.component.html
@@ -33,6 +33,14 @@
           [label]="'Nome'"
           [isDisabled]="isDisabled"
         />
+
+        <div class="mt-5">
+          <inputText
+            formControlName="pathJasper"
+            [label]="'Path Jasper'"
+            [isDisabled]="isDisabled"
+          />
+        </div>
       </div>
       <div class="p1">
         <inputArea
