--- a/web/cader/src/app/auth/controllership/lotofexpense/lote-of-expense-list/lote-of-expense-list.component.html
+++ b/web/cader/src/app/auth/controllership/lotofexpense/lote-of-expense-list/lote-of-expense-list.component.html
@@ -4,3 +4,6 @@
   [header]="header"
   [atributos]="atributos"
 ></dataTable>
+<model-filter>
+  <lote-of-expense-filter></lote-of-expense-filter>
+</model-filter>
