--- a/web/cader/src/app/components/custom/autocomplete/autocomplete.component.html
+++ b/web/cader/src/app/components/custom/autocomplete/autocomplete.component.html
@@ -14,12 +14,12 @@
     </span>
   </div>
   <div class="">
-    <button (click)="getCombo()" class="btn refresh" [disabled]="isDisabled">
+    <button (click)="getCombo()" class="btn refresh" [disabled]="disabled2">
       <i class="pi pi-refresh"></i>
     </button>
   </div>
   <div>
-    <button (click)="cleanSeleted()" class="btn clean" [disabled]="isDisabled">
+    <button (click)="cleanSeleted()" class="btn clean" [disabled]="disabled2">
       <i class="pi pi-times"></i>
     </button>
   </div>
