--- a/web/cader/src/app/components/custom/input-date/input-date.component.html
+++ b/web/cader/src/app/components/custom/input-date/input-date.component.html
@@ -6,11 +6,10 @@
       dateFormat="dd/mm/yy"
       [disabled]="disabled2"
     ></p-calendar>
-
     <label>{{ label }}</label>
   </span>
   <div>
-    <button (click)="clean()" class="btn clean" [disabled]="isDisabled">
+    <button (click)="clean()" class="btn clean" [disabled]="disabled2">
       <i class="pi pi-times"></i>
     </button>
   </div>
