--- a/web/cader/src/app/auth/controllership/lotofexpense/lote-of-expense-filter/lote-of-expense-filter.component.html
+++ b/web/cader/src/app/auth/controllership/lotofexpense/lote-of-expense-filter/lote-of-expense-filter.component.html
@@ -1,1 +1,44 @@
-<p>lote-of-expense-filter works!</p>
+<div [formGroup]="form" class="row mX1">
+  <div class="mt2 col-xs-12 col-md-4">
+    <inputDate
+      formControlName="dueDateStart"
+      [label]="'Data Inicial'"
+    ></inputDate>
+  </div>
+  <div class="mt2 col-xs-12 col-md-4">
+    <inputDate formControlName="dueDateEnd" [label]="'Data Final'"></inputDate>
+  </div>
+  <div class="row">
+    <div class="mt2 col-xs-12 col-md-6 col-lg-4">
+      <autocomplete
+        formControlName="wallet"
+        [service]="serviceWallet"
+        [label]="'Carteira'"
+      />
+    </div>
+    <div class="mt2 col-xs-12 col-md-6 col-lg-4">
+      <autocomplete
+        formControlName="person"
+        [service]="servicePerson"
+        [label]="'Pessoa'"
+      />
+    </div>
+    <div class="mt2 col-xs-12 col-md-6 col-lg-4">
+      <autocomplete
+        formControlName="paymentType"
+        [service]="servicePaymentTypeService"
+        [label]="'Meio de Pagamento'"
+      />
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="mt2 col-xs-12 col-md-6 col-lg-4">
+      <autocomplete
+        formControlName="expenseCategory"
+        [service]="serviceExpenseCategory"
+        [label]="'Categoria'"
+      />
+    </div>
+  </div>
+</div>
