--- a/web/cader/src/app/components/custom/input-reais/input-reais.component.html
+++ b/web/cader/src/app/components/custom/input-reais/input-reais.component.html
@@ -5,7 +5,7 @@
       type="text"
       [placeholder]="placeholder"
       [disabled]="disabled2"
-      (keyup)="teclar()"
+      (keyup)="teclar($event)"
       [(ngModel)]="value"
       IkMoney
     />
