--- a/web/cader/src/app/auth/controllership/cashinflow/cash-inflow-view/cash-inflow-payment-view/cash-inflow-payment-view.component.html
+++ b/web/cader/src/app/auth/controllership/cashinflow/cash-inflow-view/cash-inflow-payment-view/cash-inflow-payment-view.component.html
@@ -1,4 +1,4 @@
-<div [formGroup]="form" class="mX1">
+<div *ngIf="form" [formGroup]="form" class="mX1">
   <div class="row">
     <div class="col-xs-12 col-md-6 col-lg-4 mt2">
       <autocomplete
