--- a/web/cader/src/app/auth/controllership/lotofexpense/lote-of-expense-view/lot-of-expense-model/lot-of-expense-model.component.html
+++ b/web/cader/src/app/auth/controllership/lotofexpense/lote-of-expense-view/lot-of-expense-model/lot-of-expense-model.component.html
@@ -34,8 +34,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 mt2">
         <inputNumber
           formControlName="amount"
-          [label]="'Quantidade
-          '"
+          [label]="'Quantidade'"
           [isDisabled]="isDisabled"
         />
       </div>
